@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String name
  -String NIF
}

class Collaborator {
  -String name
  -String email
}

class Manager {
  -String name
  -String email
}

class User {
  -String email
  -String password
}

class ExternalPwdGeneratorAlgorithm {
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "1" ExternalPwdGeneratorAlgorithm : resort to >

Organization "1" -- "1" Collaborator: has >
Organization "1" -- "1" Manager: has >

Collaborator "0..1" -- "1" User: acts like >
Manager "0..1" -- "1" User: acts like >

ExternalPwdGeneratorAlgorithm "1" -- "*" User : generate password >

@enduml